<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dogFragment"
            android:icon="@drawable/ic_menu_dog"
            android:title="@string/action_dog" />
        <item
            android:id="@+id/reportFragment"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/action_report" />
        <item
            android:id="@+id/aboutusFragment"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/action_about"/>
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>